--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -6,21 +6,6 @@
   tags:
     - packages
 
-- name: Install universal base packages from arch user repository
-  shell: |
-    set -o pipefail
-    pamac build -d --no-confirm {{ item }} | grep "is up to date"
-    if [ $? != 0 ]; then
-      pamac build --no-confirm {{ item }}
-    fi
-  with_items: "{{ base_packages_aur }}"
-  become: true
-  register: command_result
-  failed_when: command_result.rc != 0
-  changed_when: "'successfully' in command_result.stdout"
-  tags:
-    - packages
-
 - name: Create pacman hook directory
   file: path=/etc/pacman.d/hooks
         state=directory
@@ -32,3 +17,20 @@
     dest: /etc/makepkg.conf
     regexp: "^COMPRESSXZ"
     line: "COMPRESSXZ=(xz -c -z - --threads=0)"
+
+- name: Create AUR directory
+  file: path=/home/{{ user.name }}/{{ aur.dir }}
+        state=directory
+        owner={{ user.name }}
+        group={{ user.group }}
+  tags:
+    - aur
+    - packages
+
+- name: Install AUR base packages
+  aur:
+    name: "{{ aur.packages }}"
+    user: "{{ user.name }}"
+  tags:
+    - aur
+    - packages
